// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snap - injection | CONFIGURATION: default | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: default | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: default | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5ub3QtaW1wb3J0ZWQuNjEzMTUzMzUx"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5tdWx0aXBsZS11c2VzLjYxMzE1MzM1MQ=="
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5tdWx0aXBsZS11c2VzLjYxMzE1MzM1MQ=="
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5tdWx0aXBsZS11c2VzLjgzMTM3MzY5MQ=="
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5zb21lLXN1cHBvcnRlZC11c2UtY2FzZXMuNjEzMTUzMzUx"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5zb21lLXN1cHBvcnRlZC11c2UtY2FzZXMuNjEzMTUzMzUx"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5zb21lLXN1cHBvcnRlZC11c2UtY2FzZXMuNjEzMTUzMzUx"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5pbXBvcnQtYXMuOTQzNDgwMTQ="
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi5kZWZhdWx0LjYxMzE1MzM1MQ=="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi53aXRoLWN1c3RvbS1wcm9wZXJ0aWVzLjI5ODM4MTAyNjc="
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "base64" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "dGVzdHMuX19maXh0dXJlc19fLmluamVjdGlvbi53aXRoLWluamVjdEludGwuNjEzMTUzMzUx"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1331782201"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "1006251254"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "1006251254"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "1313112260"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "3211349632"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "3211349632"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "3211349632"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "2767586989"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "3801867233"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "4087248873"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "murmur3" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1882509071"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1331782201"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "1006251254"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "1006251254"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "1313112260"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "3211349632"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "3211349632"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "3211349632"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "2767586989"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "3801867233"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "4087248873"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: hashAlgorithm = "unknown" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "1882509071"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: moduleSourceName = "gatsby-plugin-intl" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: relativeTo = "../" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src.__fixtures__" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = "src/" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.not-imported.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests.__fixtures__.injection.multiple-uses.613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests.__fixtures__.injection.multiple-uses.831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.some-supported-use-cases.613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests.__fixtures__.injection.import-as.94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.default.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests.__fixtures__.injection.with-custom-properties.2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = /__fixtures__/ | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests.__fixtures__.injection.with-injectIntl.613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: removePrefix = true | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | does nothing if id is already provided 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            id: 'my.custom.id',
            defaultMessage: 'hello'
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | does nothing if react-intl is not imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_not-imported_613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | multiple uses 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests___fixtures___injection_multiple-uses_613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'hello',
                "id": "tests___fixtures___injection_multiple-uses_613153351"
            }),
            intl.formatMessage({
                defaultMessage: 'some other message',
                "id": "tests___fixtures___injection_multiple-uses_831373691"
            })
        ]
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | some supported use cases 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var Component2 = function Component2(param) {
    var intl = param.intl;
    var label = intl.formatMessage({
        defaultMessage: 'hello',
        "id": "tests___fixtures___injection_some-supported-use-cases_613153351"
    });
    return /*#__PURE__*/ _jsx("button", {
        "aria-label": intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_some-supported-use-cases_613153351"
        }),
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_some-supported-use-cases_613153351"
        })
    });
};
injectIntl(Components2);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with FormattedMessage imported as something else 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl as i18n } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'i18n',
            "id": "tests___fixtures___injection_import-as_94348014"
        })
    });
}
export default i18n(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with Injection API HOC imported 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_default_613153351"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with a value interpolated in the message 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: "template string ".concat(1 + 1)
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with a variable as the defaultMessage 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
var message = 'variable message';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: message
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with a variable as the defaultMessage 2`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
import { message } from './messages';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage(message)
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with custom properties in formatMessage call 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'custom prop',
            other: 123,
            "id": "tests___fixtures___injection_with-custom-properties_2983810267"
        })
    });
}
export default injectIntl(App);
"
`;

exports[`snap - injection | CONFIGURATION: separator = "_" | with injectIntl 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { injectIntl } from 'react-intl';
function App(param) {
    var intl = param.intl;
    return /*#__PURE__*/ _jsx("div", {
        children: intl.formatMessage({
            defaultMessage: 'hello',
            "id": "tests___fixtures___injection_with-injectIntl_613153351"
        })
    });
}
export default injectIntl(App);
"
`;
